--- a/app/src/main/res/layout/add_to_cart_layout.xml
+++ b/app/src/main/res/layout/add_to_cart_layout.xml
@@ -108,12 +108,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:text="0$"
+                        android:text="0đ"
                         android:textSize="18sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <TextView
-                        android:text="3$"
+                        android:text="3000đ"
                         android:textSize="18sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
