--- a/app/src/main/res/layout/drink_item_layout.xml
+++ b/app/src/main/res/layout/drink_item_layout.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
     app:contentPadding="5dp"
@@ -36,8 +36,8 @@
             android:layout_height="wrap_content">
             <TextView
                 android:textColor="@color/c3"
-                android:text="Price"
-                android:layout_weight="2"
+                android:text="Giá"
+                android:layout_weight="1"
                 android:gravity="center"
                 android:textSize="12sp"
                 android:layout_width="wrap_content"
